# e57inspector

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build-ubuntu-x64.yml  build.yml  ubuntu-lts.yml  windows.yml
app/: CMakeLists.txt  E57PropertyTree.cpp  E57PropertyTree.h  E57Tree.cpp  E57Tree.h  E57TreeNode.cpp  E57TreeNode.h  E57Utils.cpp  E57Utils.h  Image2d.cpp  Image2d.h  NodeAction.h  PanoramaImageThread.cpp  PanoramaImageThread.h  ScenePropertyEditor.cpp  ScenePropertyEditor.h  ScenePropertyEditorUtils.h  SceneTree.cpp  SceneTree.h  SceneTreeNode.cpp  SceneTreeNode.h  SceneTreeNodeFactory.cpp  SceneTreeNodeFactory.h  SceneView.cpp  SceneView.h  ShaderFactory.cpp  ShaderFactory.h  about.cpp  about.h  about.ui  boundingbox.cpp  boundingbox.h  camera.cpp  camera.h  geometry.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  octree.cpp  (+17 more)
app/cmake/: gitversion.cmake
app/pointcloudrenderer/: camera.cpp  camera.h  openglarraybuffer.h  pointcloud.cpp  scene.cpp  scene.h  silrucache.h  sipointcloudrenderer.h
app/propertyeditor/: CBaseProperty.cpp  CBaseProperty.h  CPropertyEditor.cpp  CPropertyEditor.h  LICENSE
app/resources/: resources.qrc
app/resources/shaders/: default_fragment.glsl  default_vertex.glsl  line_fragment.glsl  line_vertex.glsl
app/resources/text/: about.md  welcome.html
app/resources/text/help/: help.html
app/resources/text/licenses/: GLM.md
ci/: build_ubuntu.sh  build_windows.bat
docs/: index.html
lib/: CMakeLists.txt
lib/include/e57inspector/: E57Node.h  E57Reader.h
lib/src/: E57Reader.cpp  E57ReaderImpl.cpp  E57ReaderImpl.h  E57Utils.h  PagedBinaryFileReader.cpp  PagedBinaryFileReader.h
licenses/: LICENSE-LIBE57  LICENSE-LIBE57FORMAT
panorama/: CMakeLists.txt  main.cpp  panorama.cpp  panorama.h
